<resources>
    <string name="app_name">PetsCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicar">Iniciar</string>
    <string name="nueva_mascota">Nueva Mascota</string>
    <string name="vacunas">Vacunas</string>
    <string name="tratamientos">Tratamientos</string>
    <string name="nueva_vacuna">Nueva vacuna</string>
    <string name="nuevo_medicamento">Nuevo medicamento</string>
    <string name="eliminar_mascota">Eliminar Mascota</string>
    <string name="editar_mascota">Editar Mascota</string>
    <string name="programar_vacuna">Programar Vacuna</string>
    <string name="fecha_programada">Fecha Programada</string>
    <string name="guardar">Guardar</string>
    <string name="vacuna">Vacuna</string>
    <string name="clinica">Clinica</string>
    <string name="nombre_mascota">Nombre</string>
    <string name="tipo_mascota">Tipo</string>
    <string name="raza_mascota">Raza</string>
    <string name="fecha_de_nacimientoM">Fecha de Nacimiento</string>
    <string name="fecha">xx/xx/xxxx</string>
    <string name="nueva_mascotas">Nueva mascota</string>
    <string name="medicamento">Medicamento:</string>
    <string name="hora">Hora:</string>
    <string name="vacunaRV">Vacuna:</string>
    <string name="fecha_programadaRV">Fecha programada:</string>
    <string name="estadoRV">Estado:</string>
    <string name="peso">Peso</string>

    <string-array name="estado_vacuna">
        <item>Atrasado</item>
        <item>Programado</item>
        <item>Aplicado</item>
    </string-array>

    <string-array name="tiposMascotas">
        <item>Perro</item>
        <item>Gato</item>
        <item>Conejo</item>
        <item>Hamster</item>
        <item>Ave</item>
        <item>Otro</item>
    </string-array>
</resources>