<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_mascotas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvMascotaNombre"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPhoto"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/nombre_mascota"
        app:layout_constraintVertical_bias="0.1"
        />
    <TextView
        android:id="@+id/tvMascotaTipo"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPhoto"
        app:layout_constraintTop_toBottomOf="@+id/tvMascotaNombre"
        android:hint="@string/tipo_mascota"
        app:layout_constraintVertical_bias="0.1"/>
    <TextView
        android:id="@+id/tvMascotaRaza"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPhoto"
        app:layout_constraintTop_toBottomOf="@+id/tvMascotaTipo"
        android:hint="@string/raza_mascota"
        app:layout_constraintVertical_bias="0.1"/>

</androidx.constraintlayout.widget.ConstraintLayout>