<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NuevaMascotaFragment">

<TextView
    android:id="@+id/tvTitulo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/nueva_mascotas"
    android:textAlignment="center"
    android:textStyle="bold"
    android:textSize="30sp"/>
<TextView
    android:id="@+id/tvNombre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="NOMBRE"
    android:textSize="20sp"
    android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Duke"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="TIPO"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>

    <Spinner
    android:id="@+id/spTipo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvTipo"
    android:entries="@array/tiposMascotas"
    android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/tvRaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spTipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/raza_mascota"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/etRaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvRaza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Husky canadiense"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etRaza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fecha_de_nacimientoM"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/etFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="date"
        android:hint="@string/fecha"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:focusable="false"
        />
    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etFechaNacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="PESO"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPeso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="0"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImagen"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />

    <Button
        android:id="@+id/btnGuardarNuevMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivImagen"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />






</androidx.constraintlayout.widget.ConstraintLayout>