<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditarMascotaFragment">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="EDITAR MASCOTA"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tvENombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="NOMBRE"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etENombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvENombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Duke"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvETipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etENombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="TIPO"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>

    <Spinner
        android:id="@+id/spETipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvETipo"
        android:entries="@array/tiposMascotas"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/tvERaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spETipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/raza_mascota"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/etERaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvERaza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Husky canadiense"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tvEFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etERaza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fecha_de_nacimientoM"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/etEFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEFechaNacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="date"
        android:hint="@string/fecha"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:focusable="false"
        />
    <TextView
        android:id="@+id/tvEPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etEFechaNacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/raza_mascota"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/etEPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEPeso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="0 Kg"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivEImagen"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/usuario"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEPeso" />

    <Button
        android:id="@+id/btnEGuardarNuevMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivEImagen"
        app:layout_constraintTop_toBottomOf="@+id/etEPeso" />

</androidx.constraintlayout.widget.ConstraintLayout>